Updated html editor